force-app/main/default/objects/Product2/fields/Active_Flag_A__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag_A__c</fullName>
    <label>Active Flag( A)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>