force-app/main/default/objects/Product2/fields/Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>Charge_Code__c</fullName>
    <label>Charge Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>