force-app/main/default/objects/Product2/fields/Connect_date__c.field-meta.xml
<CustomField>
    <fullName>Connect_date__c</fullName>
    <label>Connect date</label>
    <type>Date</type>
</CustomField>