force-app/main/default/objects/Product2/fields/Cust_Owened_Maint_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Cust_Owened_Maint_Equipment__c</fullName>
    <label>Cust Owened/Maint Equipment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>