force-app/main/default/objects/Product2/fields/DC_Disconnect_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>DC_Disconnect_Reason_Code__c</fullName>
    <label>DC(Disconnect Reason Code)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>