force-app/main/default/objects/Product2/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Grouping Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>