force-app/main/default/objects/Product2/fields/I_HISI_WIFI__c.field-meta.xml
<CustomField>
    <fullName>I_HISI_WIFI__c</fullName>
    <label>I(HISI/WIFI)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>