force-app/main/default/objects/Product2/fields/ICB_Code_Flag__c.field-meta.xml
<CustomField>
    <fullName>ICB_Code_Flag__c</fullName>
    <label>ICB Code/Flag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>