force-app/main/default/objects/Product2/fields/In_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Date__c</fullName>
    <label>In Date</label>
    <type>Date</type>
</CustomField>