force-app/main/default/objects/Product2/fields/In_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>In_Service_Order__c</fullName>
    <label>In Service Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>