force-app/main/default/objects/Product2/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>S&amp;E Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>