force-app/main/default/objects/Product2/fields/Item_Rate__c.field-meta.xml
<CustomField>
    <fullName>Item_Rate__c</fullName>
    <label>Item Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>