force-app/main/default/objects/Product2/fields/Item_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Sequence_Number__c</fullName>
    <label>Item Sequence Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>