force-app/main/default/objects/Product2/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>S&amp;E Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>