force-app/main/default/objects/Product2/fields/Library_Id__c.field-meta.xml
<CustomField>
    <fullName>Library_Id__c</fullName>
    <label>Library Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>