force-app/main/default/objects/Product2/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <label>Line Total</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>