force-app/main/default/objects/Product2/fields/MRC_NRC_Flag__c.field-meta.xml
<CustomField>
    <fullName>MRC_NRC_Flag__c</fullName>
    <label>MRC/NRC Flag</label>
    <length>4</length>
    <type>Text</type>
</CustomField>