force-app/main/default/objects/Product2/fields/No_Tax_Flag__c.field-meta.xml
<CustomField>
    <fullName>No_Tax_Flag__c</fullName>
    <label>No Tax Flag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>