force-app/main/default/objects/Product2/fields/Non_Reaccuring_Charges__c.field-meta.xml
<CustomField>
    <fullName>Non_Reaccuring_Charges__c</fullName>
    <label>Non Reaccuring Charges</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>