force-app/main/default/objects/Product2/fields/Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Out_Date__c</fullName>
    <label>Out Date</label>
    <type>Date</type>
</CustomField>