force-app/main/default/objects/Product2/fields/Out_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Out_Service_Order__c</fullName>
    <label>Out Service Order</label>
    <length>5</length>
    <type>Text</type>
</CustomField>