force-app/main/default/objects/Product2/fields/Package_Description__c.field-meta.xml
<CustomField>
    <fullName>Package_Description__c</fullName>
    <label>Package Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>