force-app/main/default/objects/Product2/fields/product_description__c.field-meta.xml
<CustomField>
    <fullName>product_description__c</fullName>
    <label>product description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>