force-app/main/default/objects/Product2/fields/Product_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Id__c</fullName>
    <label>Product Group Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>