force-app/main/default/objects/Product2/fields/Product_Grouping_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Product_Grouping_Sequence__c</fullName>
    <label>Product Grouping Sequence</label>
    <length>25</length>
    <type>Text</type>
</CustomField>