force-app/main/default/objects/Product2/fields/Product_Rate__c.field-meta.xml
<CustomField>
    <fullName>Product_Rate__c</fullName>
    <label>Product Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>