force-app/main/default/objects/Product2/fields/Quote_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Discount__c</fullName>
    <label>Quote Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>