force-app/main/default/objects/Product2/fields/S_E_Code__c.field-meta.xml
<CustomField>
    <fullName>S_E_Code__c</fullName>
    <label>S&amp;E Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>