force-app/main/default/objects/Product2/fields/S_E_Type_Flag__c.field-meta.xml
<CustomField>
    <fullName>S_E_Type_Flag__c</fullName>
    <label>S&amp;E Type Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>