force-app/main/default/objects/Product2/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <length>5</length>
    <type>Text</type>
</CustomField>