force-app/main/default/objects/Product2/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <label>Service Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>