force-app/main/default/objects/Product2/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>