force-app/main/default/objects/Product2/fields/Service_Type_ST__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_ST__c</fullName>
    <label>Service Type(ST)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>