force-app/main/default/objects/Product2/fields/SiebelRowID__c.field-meta.xml
<CustomField>
    <fullName>SiebelRowID__c</fullName>
    <label>SiebelRowID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>