force-app/main/default/objects/Product2/fields/SnEcode__c.field-meta.xml
<CustomField>
    <fullName>SnEcode__c</fullName>
    <label>SnEcode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>