force-app/main/default/objects/Product2/fields/SnEtype__c.field-meta.xml
<CustomField>
    <fullName>SnEtype__c</fullName>
    <label>SnEtype</label>
    <length>5</length>
    <type>Text</type>
</CustomField>