force-app/main/default/objects/Product2/fields/Status_S__c.field-meta.xml
<CustomField>
    <fullName>Status_S__c</fullName>
    <label>Status (S)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>