force-app/main/default/objects/Product2/fields/Tariff_Code__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Code__c</fullName>
    <label>Tariff Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>