force-app/main/default/objects/Product2/fields/Tariff_name__c.field-meta.xml
<CustomField>
    <fullName>Tariff_name__c</fullName>
    <label>Tariff name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>