force-app/main/default/objects/Product2/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>UnitPrice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>