force-app/main/default/objects/Product2/fields/Uom__c.field-meta.xml
<CustomField>
    <fullName>Uom__c</fullName>
    <label>Uom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>