force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>SKU__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>Item_Rate__c</columns>
    <columns>Item_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SKU__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Products</label>
    <language>en_US</language>
</ListView>